# MarsCommonFtc

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
.agents/skills/math-in-markdown/: SKILL.md
.agents/skills/trajectory-svg/: SKILL.md
ControlLab/: build.gradle
ControlLib/: build.gradle
RuckigJava/: README.md  build.gradle
RuckigNative/: CMakeLists.txt  build.gradle
RuckigNative/src/main/cpp/: ruckig_jni.cpp
WpiMath/: build.gradle
book/: chapter-01-getting-started.md  chapter-01-objections.md  chapter-02-motor-abstraction.md  chapter-02-objections.md  chapter-03-feedforward-control.md  chapter-03-objections.md  chapter-04-objections.md  chapter-04-pid-control.md  chapter-05-objections.md  chapter-05-trapezoidal-exponential-profiles.md  chapter-06-objections.md  chapter-06-s-curve-trajectories.md  chapter-07-objections.md  chapter-07-sinusoidal-trajectories.md  chapter-08-objections.md  chapter-08-ruckig.md  chapter-08-trajectory-management.md  chapter-09-back-emf-aware-tuning.md  chapter-09-objections.md  chapter-09-trajectory-management.md  chapter-10-back-emf-aware-tuning.md  chapter-10-linear-algebra.md  chapter-10-objections.md  chapter-11-linear-algebra.md  chapter-11-state-space-fundamentals.md  chapter-12-flywheel-state-space.md  chapter-12-state-space-fundamentals.md  chapter-13-flywheel-state-space.md  table-of-contents.md
docs/: SETUP.md  backemf.md
docs/superpowers/plans/: 2026-03-28-new-challenge-button.md
notes/: arm-controller-design.md  ruckig-java-port-plan.md  vertical-arm-controller-design.md
(+266 files in other folders)
